# vomeet

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  env-example.cpu  env-example.gpu  fresh_setup.sh  google_oauth_integration.md  webhook_schema.md
CLA/: Corporate_CLA.md  Individual_CLA.md
chart/: Chart.yaml  values-development.yaml  values-production.yaml  values-staging.yaml  values.staging.yaml  values.yaml
docs/: README.md  deployment.md  kubernetes-setup.md  self-hosted-management.md  staging-setup.md  user_api_guide.md  websocket.md
issues/: bot-states-reference.md  stop-bot-stuck-active-status.md
libs/shared-models/: pyproject.toml
libs/shared-models/alembic/: env.py
libs/shared-models/alembic/versions/: 4910b527999c_add_account_models.py  5b7590eed3cf_add_push_notification_channels_to_.py  5befe308fa8b_add_data_field_to_users_table.py  9063af59d4e3_add_bot_settings.py  a8c24b0ac76a_add_speaker_to_audio_chunks.py  b70eedcfc443_add_webhooks_table.py  c3f39d071d2c_add_google_integrations_table.py  cc50d539a0db_add_account_id_to_meeting.py  dc59a1c03d1f_add_meeting_data_jsonb_column.py  e721bd1ecf00_add_audio_chunks_table.py  ef2a1ab911f2_add_scheduled_meetings_table.py  f237b4131c22_add_scheduled_times_to_meetings.py
libs/shared-models/shared_models/: database.py  models.py  schemas.py
nbs/: 0_basic_test.ipynb  1_load_tests.ipynb  2_bot_concurrency.ipynb  3_API_validation.ipynb  manage_users.ipynb  websockets.ipynb
testing/: __init__.py  bot.py  core.py  load.py  run_vomeet_interaction.sh  (+1 more)
(+145 files in other folders)
